# hello-rss

./: .sample.env  Cargo.toml  README.md
migration/: Cargo.toml
server/: .env.sample  .gitignore  .sample.env  Cargo.toml  README.md
server/entity/: Cargo.toml
server/entity/src/: access_token.rs  client.rs  favorite.rs  lib.rs  mod.rs  prelude.rs  rss_channel.rs  rss_item.rs  user.rs  user_client.rs  user_session.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220428_000001_create_user_table.rs  m20220428_000002_create_client_table.rs  m20220428_000002_create_user_client_table.rs  m20220428_000003_create_access_token_table.rs  m20220428_000003_create_user_session_table.rs  m20220428_000004_create_rss_channel_table.rs  m20220428_000005_create_rss_item_table.rs  m20220428_000006_creaate_favorite_table.rs  main.rs
server/src/: app.rs  config.rs  db.rs  error.rs  extractor.rs  main.rs  router.rs  validator.rs
server/src/api/: mod.rs  user.rs
server/src/api/favorite/: mod.rs
server/src/api/rss/: mod.rs
server/src/api/user/: mod.rs  signup.rs
server/src/dto/: user.rs
server/src/graphql/: schema.rs
server/src/service/: mod.rs  user.rs
server/src/utils/: jwt.rs
