[package]
edition = "2021"
name = "migration"
publish = false
version = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-schema = { version = "0.7.1", default-features = false, features = ["migration", "debug-print", "sqlx", "sqlx-mysql", "runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "sqlx-postgres"] }
entity = { path = "../entity" }
