[package]
name = "hello-rss-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
anyhow = "1.0.57"
axum = "0.5.3"
chrono = "0.4.19"
dotenv = "0.15.0"
reqwest = "0.11.10"
rss = "2.0.1"
sea-orm = { version = "0.8.0", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
toml = "0.5.9"
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.3.2", features = [
    "trace",
    "add-extension",
    "cors",
    "request-id",
] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
entity = { path = "entity" }
migration = { path = "migration" }
jsonwebtoken = "8.1.0"
validator = { version = "0.15.0", features = [
    "derive",
    "validator_derive",
    "unic",
] }
envconfig = "0.10.0"
http = "0.2.7"
hyper = { version = "0.14.18", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4"] }
thiserror = "1.0.31"
bcrypt = "0.13.0"
lazy_static = "1.4.0"
rayon = "1.5.3"
